# cloudflare-rfc2136

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml  release.yaml
k8s/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
src/: config.rs  error.rs  main.rs
src/cloudflare/: client.rs  mod.rs  model.rs
src/dns/: mod.rs  rfc2136.rs  tsig.rs  validation.rs
